batchify 4 data resource queries for reporting