@@ -13,9 +13,9 @@ import static org.pmiops.workbench.cohortbuilder.util.QueryParameterValues.rowTo
 import static org.pmiops.workbench.testconfig.ReportingTestUtils.INSTITUTION__SHORT_NAME;
 import static org.pmiops.workbench.testconfig.ReportingTestUtils.countPopulatedTables;
 import static org.pmiops.workbench.testconfig.ReportingTestUtils.createEmptySnapshot;
-import static org.pmiops.workbench.testconfig.ReportingTestUtils.createReportingDataset;
 import static org.pmiops.workbench.testconfig.ReportingTestUtils.createReportingInstitution;
 import static org.pmiops.workbench.testconfig.ReportingTestUtils.createReportingNewUserSatisfactionSurvey;
+import static org.pmiops.workbench.testconfig.ReportingTestUtils.createReportingWorkspaceFreeTierUsage;
 import static org.pmiops.workbench.utils.TimeAssertions.assertTimeApprox;
 
 import com.google.cloud.bigquery.InsertAllRequest;
@@ -23,7 +23,6 @@ import com.google.cloud.bigquery.InsertAllRequest.RowToInsert;
 import com.google.cloud.bigquery.InsertAllResponse;
 import com.google.cloud.bigquery.QueryJobConfiguration;
 import com.google.cloud.bigquery.TableResult;
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.Multimap;
 import com.google.common.collect.Multimaps;
 import java.time.Instant;
@@ -45,7 +44,6 @@ import org.pmiops.workbench.db.model.DbUser.DbGeneralDiscoverySource;
 import org.pmiops.workbench.db.model.DbUser.DbPartnerDiscoverySource;
 import org.pmiops.workbench.model.BillingStatus;
 import org.pmiops.workbench.model.ReportingCohort;
-import org.pmiops.workbench.model.ReportingDatasetCohort;
 import org.pmiops.workbench.model.ReportingNewUserSatisfactionSurvey;
 import org.pmiops.workbench.model.ReportingSnapshot;
 import org.pmiops.workbench.model.ReportingUser;
@@ -105,17 +103,21 @@ public class ReportingUploadServiceTest {
     reportingSnapshot =
         createEmptySnapshot()
             .captureTimestamp(NOW.toEpochMilli())
-            .datasets(ImmutableList.of(createReportingDataset()))
-            .institutions(ImmutableList.of(createReportingInstitution()));
+            .workspaceFreeTierUsage(
+                Collections.singletonList(createReportingWorkspaceFreeTierUsage()))
+            .institutions(Collections.singletonList(createReportingInstitution()));
 
     snapshotWithNulls =
         createEmptySnapshot()
             .captureTimestamp(NOW.toEpochMilli())
-            .datasets(ImmutableList.of(createReportingDataset().description(null)))
-            .institutions(ImmutableList.of(createReportingInstitution().displayName(null)));
+            .workspaceFreeTierUsage(
+                Collections.singletonList(
+                    createReportingWorkspaceFreeTierUsage().workspaceId(null)))
+            .institutions(
+                Collections.singletonList(createReportingInstitution().displayName(null)));
 
     reportingWorkspaces =
-        ImmutableList.of(
+        List.of(
             new ReportingWorkspace()
                 .workspaceId(201L)
                 .name("Circle K")
@@ -216,12 +218,17 @@ public class ReportingUploadServiceTest {
     final ReportingSnapshot largeSnapshot =
         createEmptySnapshot()
             .captureTimestamp(NOW.toEpochMilli())
-            .datasetCohorts(
+            .workspaceFreeTierUsage(
+                Collections.singletonList(createReportingWorkspaceFreeTierUsage()))
+            .newUserSatisfactionSurveys(
+                Collections.singletonList(createReportingNewUserSatisfactionSurvey()))
+            .institutions(
                 IntStream.range(0, 21)
-                    .mapToObj(id -> new ReportingDatasetCohort().cohortId((long) id))
-                    .collect(ImmutableList.toImmutableList()))
-            .cohorts(ImmutableList.of(ReportingTestUtils.createReportingCohort()))
-            .institutions(ImmutableList.of(ReportingTestUtils.createReportingInstitution()));
+                    .mapToObj(
+                        id ->
+                            ReportingTestUtils.createReportingInstitution()
+                                .institutionId((long) id))
+                    .toList());
 
     reportingUploadService.uploadSnapshot(largeSnapshot);
     verify(mockBigQueryService, times(12)).insertAll(insertAllRequestCaptor.capture());
@@ -261,7 +268,7 @@ public class ReportingUploadServiceTest {
   @Test
   public void testUploadBatch_user() {
     List<ReportingUser> reportingUsers =
-        ImmutableList.of(
+        List.of(
             userFixture.createDto(),
             new ReportingUser().username("ted@aou.biz").disabled(true).userId(202L),
             new ReportingUser().username("socrates@aou.biz").disabled(false).userId(303L),
@@ -288,7 +295,7 @@ public class ReportingUploadServiceTest {
   @Test
   public void testUploadBatch_cohort() {
     List<ReportingCohort> reportingCohorts =
-        ImmutableList.of(
+        List.of(
             new ReportingCohort().cohortId(100L).name("name1"),
             new ReportingCohort().cohortId(200L).name("name2"));
     final InsertAllResponse mockInsertAllResponse = mock(InsertAllResponse.class);
@@ -315,8 +322,7 @@ public class ReportingUploadServiceTest {
     ReportingNewUserSatisfactionSurvey reportingNewUserSatisfactionSurvey =
         createReportingNewUserSatisfactionSurvey();
     List<ReportingNewUserSatisfactionSurvey> reportingNewUserSatisfactionSurveys =
-        ImmutableList.of(
-            reportingNewUserSatisfactionSurvey, new ReportingNewUserSatisfactionSurvey());
+        List.of(reportingNewUserSatisfactionSurvey, new ReportingNewUserSatisfactionSurvey());
     final InsertAllResponse mockInsertAllResponse = mock(InsertAllResponse.class);
 
     doReturn(Collections.emptyMap()).when(mockInsertAllResponse).getInsertErrors();
@@ -342,7 +348,7 @@ public class ReportingUploadServiceTest {
   @Test
   public void testUploadBatchUserGeneralDiscoverySource() {
     List<ReportingUserGeneralDiscoverySource> userGeneralDiscoverySources =
-        ImmutableList.of(
+        List.of(
             new ReportingUserGeneralDiscoverySource()
                 .userId(100L)
                 .answer(DbGeneralDiscoverySource.ACTIVITY_PRESENTATION_OR_EVENT.toString()),
@@ -378,7 +384,7 @@ public class ReportingUploadServiceTest {
   @Test
   public void testUploadBatchUserPartnerDiscoverySource() {
     List<ReportingUserPartnerDiscoverySource> userPartnerDiscoverySources =
-        ImmutableList.of(
+        Collections.singletonList(
             new ReportingUserPartnerDiscoverySource()
                 .userId(100L)
                 .answer(
@@ -415,7 +421,7 @@ public class ReportingUploadServiceTest {
     cohort.setWorkspaceId(101L);
     cohort.setCreatorId(null);
 
-    reportingUploadService.uploadCohortBatch(ImmutableList.of(cohort), NOW.toEpochMilli());
+    reportingUploadService.uploadCohortBatch(Collections.singletonList(cohort), NOW.toEpochMilli());
     verify(mockBigQueryService).insertAll(insertAllRequestCaptor.capture());
 
     final InsertAllRequest insertAllRequest = insertAllRequestCaptor.getValue();
